@startuml
'https://plantuml.com/object-diagram

Entity Product{
*id
--
-name
-photos
-base_price
}

object Description <<Value Object>>{
-short_description
-extended_description
}

object Category <<Value Object>>{
*category_id
--
-description
}

object Barcode <<Value Object>>{
*barcode_id
--
-type_of_barcode
}

object Brand <<Value Object>>{
*brand_id
--
-name
-reference
}

Entity Salesclerk{
*id
--
-name
}

Entity Warehouse{
*id
}

object Aisle<<Value Object>>{
}

object Row<<Value Object>>{
}

object Shelf<<Value Object>>{
}

object Bin<<Value Object>>{
-size
}


object Price <<Value Object>>{
-base_price
-final_price_with_tax
}

Entity Customer{
*VAT
__
-name
-birth_date
-gender
-phone_number
+email
}

object Billing_Address <<Value Object>>{
*address
--
-country
}

object Delivering_Address <<Value Object>>{
*address
--
-country
-tax
}

Entity Order{
*id
--
-order_state
-date_time
+address
}

object Shopping_Cart<<Value Object>>{
*id
--
+customer_id
}

Entity Payment_Method{
*payment_type_id
--
-payment_type
}

object Validation<<Value Object>>{
-email
-phone_number
}

object Product_Quantities<<Value Object>>{
-quantity
}

object Shipment_Method<<Value Object>>{
*method_id
--
-method
-cost
}

object Plant_Info<<Value Object>>{
-type_of_plant
}

Entity AGV{
*id
--
-short_description
-model
-maximum_weight
}

object Location<<Value Object>>{
*location_id
--
-location
}

object Status<<Value Object>>{
-time_left
-task
}

object Task<<Value Object>>{

}

Entity Warehouse_Employee {
*id
--
-name
}

Entity Carrier {
*company_id
}

Entity Questionnaire {

}

object Section<<Value Object>> {
-mandatory
}

object Question<<Value Object>> {
-mandatory
}

object Question_Type<<Value Object>> {

}
object Answer<<Value Object>> {

}

Order -- Price
Product -- Description
Product "1..N" -- Category
Product -- Barcode
Product -- Brand
Customer -- "1..N" Billing_Address
Customer -- "1..N" Delivering_Address
Order "1..N" -- Shopping_Cart
Customer <- "1..N" Order
Product - "1..N" Product_Quantities
Order -- Shipment_Method
Shopping_Cart -- "1..N" Product_Quantities
Order -- Payment_Method
Customer - Shopping_Cart : possesses
Customer -- Validation : undergoes
Customer -- "1..N" Product_Quantities : selects
Salesclerk "0..1" <-- "1..N" Order : registers
Warehouse -right- "1..N" Aisle : \t
Aisle -right- "1..N" Row : \t
Row -right- "1..N" Shelf : \t
Shelf -right- "1..N" Bin : \t
Bin -right- Product : \t
Plant_Info "1..N" -- Warehouse
AGV "1..N" -- Location : is based at
AGV -- Status
AGV "1..N" -right- Warehouse : \t belongs \t
Task "1..N" --> AGV
Task -> Order
Warehouse_Employee <-- "1..N" Task : creates, inspects and packages the products
Order "1..N" -- Carrier
Questionnaire -down- "1..N" Section
Section -- "1..N" Question : \t
Question -- "1..N" Answer
Question - Question
Question_Type -- Question
Customer -- Questionnaire

@enduml
